pkgdata_DATA = clock_0.png \
	       clock_1.png \
	       clock_2.png \
	       clock_3.png \
	       clock_4.png \
	       clock_5.png \
	       clock_6.png \
	       clock_7.png \
	       clock_8.png \
	       clock_9.png \
	       clock_extra.png \
	       count_down_1.png \
	       count_down_2.png \
	       count_down_3.png \
	       count_down_go.png \
	       default_record \
	       flavor_1.png \
	       flavor_2.png \
	       font0_0.png \
	       font0_1.png \
	       font0_2.png \
	       font0_3.png \
	       font0_4.png \
	       font0_5.png \
	       font0_6.png \
	       font0_7.png \
	       font0_8.png \
	       font0_9.png \
	       font0_a.png \
	       font0_and.png \
	       font0_at.png \
	       font0_b.png \
	       font0_br.png \
	       font0_c.png \
	       font0_ca.png \
	       font0_cb.png \
	       font0_cc.png \
	       font0_cd.png \
	       font0_ce.png \
	       font0_cf.png \
	       font0_cg.png \
	       font0_ch.png \
	       font0_ci.png \
	       font0_cj.png \
	       font0_ck.png \
	       font0_cl.png \
	       font0_cln.png \
	       font0_cm.png \
	       font0_cma.png \
	       font0_cn.png \
	       font0_co.png \
	       font0_cp.png \
	       font0_cq.png \
	       font0_cr.png \
	       font0_cs.png \
	       font0_ct.png \
	       font0_cu.png \
	       font0_cv.png \
	       font0_cw.png \
	       font0_cx.png \
	       font0_cy.png \
	       font0_cz.png \
	       font0_d.png \
	       font0_ds.png \
	       font0_e.png \
	       font0_ep.png \
	       font0_eq.png \
	       font0_f.png \
	       font0_g.png \
	       font0_gt.png \
	       font0_h.png \
	       font0_i.png \
	       font0_j.png \
	       font0_k.png \
	       font0_l.png \
	       font0_lt.png \
	       font0_m.png \
	       font0_mn.png \
	       font0_n.png \
	       font0_o.png \
	       font0_p.png \
	       font0_pd.png \
	       font0_pe.png \
	       font0_pl.png \
	       font0_pr.png \
	       font0_ps.png \
	       font0_pu.png \
	       font0_q.png \
	       font0_qm.png \
	       font0_r.png \
	       font0_s.png \
	       font0_sl.png \
	       font0_t.png \
	       font0_td.png \
	       font0_u.png \
	       font0_v.png \
	       font0_w.png \
	       font0_x.png \
	       font0_y.png \
	       font0_z.png \
	       font0_za.png \
	       font0_zb.png \
	       font0_zc.png \
	       font0_zd.png \
	       garbage_flavor_000.png \
	       garbage_flavor_001.png \
	       garbage_flavor_002.png \
	       garbage_flavor_003.png \
	       garbage_flavor_004.png \
	       garbage_flavor_005.png \
	       garbage_flavor_logo.png \
	       garbage_flavor_logo_x.png \
	       garbage_lightmap_0.png \
	       garbage_lightmap_1.png \
	       garbage_lightmap_2.png \
	       garbage_lightmap_3.png \
	       garbage_lightmap_4.png \
	       garbage_lightmap_5.png \
	       logo.png \
	       logo_x.png \
	       message_anykey.png \
	       message_game_over.png \
	       message_loser.png \
	       message_paused.png \
	       message_waiting.png \
	       message_winner.png \
	       sign_10.png \
	       sign_11.png \
	       sign_12.png \
	       sign_4.png \
	       sign_5.png \
	       sign_6.png \
	       sign_7.png \
	       sign_8.png \
	       sign_9.png \
	       sign_bonus.png \
	       sign_x10.png \
	       sign_x11.png \
	       sign_x12.png \
	       sign_x2.png \
	       sign_x3.png \
	       sign_x4.png \
	       sign_x5.png \
	       sign_x6.png \
	       sign_x7.png \
	       sign_x8.png \
	       sign_x9.png \
	       crack-attack.desktop \
	       crack-attack.xpm \
	       default_multiplier \
	       preview_normal.png \
	       preview_extremely_reduced.png \
	       preview_reduced.png

EXTRA_DIST = ${pkgdata_DATA}
SUBDIRS = models
