pkgdata_DATA = crackattackcubehires.obj \
	       crackattackcubemedres.obj \
	       crackattackcubehires_simplified.obj \
	       crackattackcubemedres_tex.obj \
	       crackattackcubehires_tex.obj \
	       cube.obj \
	       cube.mtl \
	       crack_attack_bf_000.mtl \
	       crack_attack_bf_000.obj \
	       crack_attack_bf_001.mtl \
	       crack_attack_bf_001.obj \
	       crack_attack_bf_002.mtl \
	       crack_attack_bf_002.obj \
	       crack_attack_bf_003.mtl \
	       crack_attack_bf_003.obj \
	       crack_attack_bf_004.mtl \
	       crack_attack_bf_004.obj \
	       crack_attack_bf_005.mtl \
	       crack_attack_bf_005.obj \
	       crack_attack_bf_006.mtl \
	       crack_attack_bf_006.obj \
	       crack_attack_bf_007.mtl \
	       crack_attack_bf_007.obj \
	       crack_attack_bf_008.mtl \
	       crack_attack_bf_008.obj \
	       crack_attack_bf_009.mtl \
	       crack_attack_bf_009.obj \
	       crack_attack_bf_010.mtl \
	       crack_attack_bf_010.obj \
	       crack_attack_bf_011.mtl \
	       crack_attack_bf_011.obj \
	       crack_attack_bf_012.mtl \
	       crack_attack_bf_012.obj \
	       crack_attack_bf_013.mtl \
	       crack_attack_bf_013.obj

EXTRA_DIST = ${pkgdata_DATA}
